--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_more = "0.15"
+tokio = {version = "0.2.0-alpha.6", features = ["macros"]}
+futures-preview = { version = "0.3.0-alpha.19"}
+rumq-core = {path = "../rumq-core", version = "0.1"}
+log = "0.4"
+async-stream = "0.1"
