--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -8,8 +8,21 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.15"
-tokio = {version = "0.2.0-alpha.6", features = ["macros"]}
-futures-preview = { version = "0.3.0-alpha.19"}
+tokio = {version = "0.2.0-alpha.6", features = ["macros", "io"]}
+tokio-rustls = "0.12.0-alpha.8"
+tokio-io = "0.2.0-alpha.6"
+futures-core-preview = "=0.3.0-alpha.19"
+futures-sink-preview = "=0.3.0-alpha.19"
+futures-util-preview = { version = "=0.3.0-alpha.19", features = ["sink", "select-macro", "async-await"] }
+
 rumq-core = {path = "../rumq-core", version = "0.1"}
 log = "0.4"
-async-stream = "0.1"
+async-stream = {git = "https://github.com/tokio-rs/async-stream"}
+
+[dev-dependencies]
+tokio-executor = {version = "0.2.0-alpha.6", features = ["current-thread"]}
+pretty_env_logger = "0.3.1"
+color-backtrace = "0.2.3"
+serde = {version = "1", features = ["derive"]}
+envy = "0.4"
+jsonwebtoken = {git = "https://github.com/Keats/jsonwebtoken", branch = "next"}
