Feature: Add async-std support along with tokio

--- a/rumq-core/Cargo.toml
+++ b/rumq-core/Cargo.toml
@@ -6,8 +6,18 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.15"
-tokio-byteorder = "0.1"
+tokio-byteorder = {package = "tokio-byteorder", version = "0.1", optional = true}
+async-byteorder = {path = "../async-byteorder", version = "0.1", optional = true}
 async-trait = "0.1"
-tokio = {version = "0.2.0-alpha.6", features = ["macros"]}
+tokio = {version = "0.2.0-alpha.6", features = ["macros"], optional = true}
+async-std = {version = "1", features = ["attributes"], optional = true}
+futures-io = {version = "0.3", optional = true}
 futures-preview = { version = "0.3.0-alpha.19"}
+cfg-if = "0.1"
 
+[features]
+async-traits = ["futures-io", "async-byteorder", "async-std"]
+tokio-traits = ["tokio-byteorder", "tokio"]
+
+[dev-dependencies]
+tokio = {version = "0.2.0-alpha.6", features = ["macros"]}
