--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -8,24 +8,25 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.15"
-tokio = {version = "0.2.0-alpha.6", features = ["macros", "io"]}
-tokio-rustls = "0.12.0-alpha.8"
-tokio-io = "0.2.0-alpha.6"
-futures-core = "0.3"
-futures-sink = "0.3"
-futures-util = { version = "=0.3", features = ["sink", "async-await"] }
+async-stream = "0.2"
+async-std = { version = "1.1", features = ["attributes", "unstable"] }
+futures-util = "0.3"
+futures-io = {version = "0.3"}
+webpki = "0.21"
+rustls = "0.16"
+async-tls = "0.6"
+rumq-core = { path = "../rumq-core", version = "0.1"}
+auto_enums = { version = "0.7", features = ["futures"]}
+log = "0.4"
 pin-utils = "0.1.0-alpha.4"
 
-rumq-core = {path = "../rumq-core", version = "0.1", features = ["tokio-traits"]}
-log = "0.4"
-async-stream = {git = "https://github.com/tokio-rs/async-stream"}
 
 [dev-dependencies]
-tokio-executor = {version = "0.2.0-alpha.6", features = ["current-thread"]}
 pretty_env_logger = "0.3.1"
 color-backtrace = "0.2.3"
 serde = {version = "1", features = ["derive"]}
 envy = "0.4"
 jsonwebtoken = {git = "https://github.com/Keats/jsonwebtoken", branch = "next"}
-futures-channel = "0.3"
-futures-executor = "0.3"
+
+[profile.release]
+debug = true
