--- a/rumq-broker/Cargo.toml
+++ b/rumq-broker/Cargo.toml
@@ -7,3 +7,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2", features = ["rt-core", "io-util", "tcp", "dns", "time", "sync", "macros"] }
+async-std = { version = "1", features = ["unstable"] }
+futures-util = "0.3"
+rumq-core = { path = "../rumq-core" }
+derive_more = "0.99"
+log = "0.4"
+sharded-slab = "0.0.6"
+pretty_env_logger = "0.3"
+
+[lib]
+name = "librumqd"
+path = "src/lib.rs"
+
+[[bin]]
+name = "rumqd"
+path = "src/rumqd.rs"
+
+[dev-dependencies]
