Async-Stream & Throttle bug fix (#10)
* Start writing unit tests for eventloop

* Use methods from core to create packets

* Fix throttle bug

* Return references from mqtt options

* Make throttle optional

* Move writes into stream implementation

* Write packets in stream implementation

* Add stream method to return a stream and remove stream implementation on MqttEventloop (as  doesn't support yield like resume support)

* Fix unit tests

--- a/rumq-core/Cargo.toml
+++ b/rumq-core/Cargo.toml
@@ -9,6 +9,7 @@ derive_more = "0.15"
 tokio-byteorder = "0.2"
 tokio = { version = "0.2", features = ["io-util"] }
 async-trait = "0.1"
+getset = "0.0.9"
 
 
 [dev-dependencies]
