Update versions for release

--- a/rumq-cli/Cargo.toml
+++ b/rumq-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumq-cli"
-version = "0.1.0"
+version = "0.1.0-alpha.1"
 authors = ["tekjar <kraviteza@gmail.com>"]
 edition = "2018"
 
