--- a/rumq-cli/Cargo.toml
+++ b/rumq-cli/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "rumq-cli"
 version = "0.1.0-alpha.1"
-authors = ["tekjar <kraviteza@gmail.com>"]
+description = "Commandline mqtt utilities to replace mosquitto_sub and mosquitto_pub"
+license = "MIT"
+repository = "https://github.com/tekjar/rumq"
+authors = ["tekjar"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
