--- a/rumq-core/Cargo.toml
+++ b/rumq-core/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "rumq-core"
 version = "0.1.0-alpha.1"
+description = "Serializes and deserializes mqtt byte stream"
+license = "MIT"
+repository = "https://github.com/tekjar/rumq"
 authors = ["tekjar"]
 edition = "2018"
 
