--- a/rumq-core/Cargo.toml
+++ b/rumq-core/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.15"
-tokio-byteorder = "0.2"
 tokio = { version = "0.2", features = ["io-util"] }
 async-trait = "0.1"
 getset = "0.0.9"
@@ -17,3 +16,8 @@ getset = "0.0.9"
 
 [dev-dependencies]
 tokio = {version = "0.2", features = ["full", "macros"]}
+bencher = "0.1"
+
+[[bench]]
+name = "bench"
+harness = false
