--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -24,6 +24,7 @@ pin-project = "0.4"
 [dev-dependencies]
 pretty_env_logger = "0.3.1"
 color-backtrace = "0.2.3"
+crossbeam-channel = "0.4"
 serde = {version = "1", features = ["derive"]}
 envy = "0.4"
 jsonwebtoken = "7.0.0-alpha.2"
