--- a/rumq-broker/Cargo.toml
+++ b/rumq-broker/Cargo.toml
@@ -7,14 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2", features = ["rt-core", "io-util", "tcp", "dns", "time", "sync", "macros"] }
-async-std = { version = "1", features = ["unstable"] }
+tokio = { version = "0.2", features = ["full"] }
+tokio-rustls = "0.12"
+quinn = "0.5"
 futures-util = "0.3"
 rumq-core = { path = "../rumq-core" }
 derive_more = "0.99"
 log = "0.4"
 sharded-slab = "0.0.6"
+structopt = "0.3"
 pretty_env_logger = "0.3"
+toml = "0.5"
+serde = { version = "1", features = ["derive"] }
 
 [lib]
 name = "librumqd"
