--- a/rumq-broker/rumqd.conf
+++ b/rumq-broker/rumqd.conf
@@ -1,5 +1,6 @@
+[[servers]]
 port = 1883
-connection_timeout_ms = 10 
+connection_timeout_ms = 100
 max_client_id_len = 256
 max_connections = 1
 max_cloud_to_device_throughput = 100
@@ -12,21 +13,25 @@ auto_save_interval_sec = 1000
 max_packet_size = 1024
 max_inflight_queue_size = 1024
 
-<<<<<<< HEAD
-# this enables tls connection. key_path is compuslory if cert_path is enabled
+
+[[servers]]
+port = 8883
+connection_timeout_ms = 100 
+max_client_id_len = 256
+max_connections = 1
+max_cloud_to_device_throughput = 100
+max_device_to_cloud_throughput = 100
+max_incoming_messages_per_sec = 100
+disk_persistence = false
+disk_retention_size = 100
+disk_retention_time_sec = 1000
+auto_save_interval_sec = 1000
+max_packet_size = 1024
+max_inflight_queue_size = 1024
+
+# this enables tls connection
 cert_path = "tlsfiles/server.cert.pem"
 key_path = "tlsfiles/server.key.pem"
 
 # provide ca_path to enable client authentication
 ca_path = "tlsfiles/ca-chain.cert.pem"
-=======
-# this enables tls connection
-# ca_path = "dummy"
-# cert_path = "dummy"
-key_path = "dummy"
-client_auth = false
->>>>>>> 6797c7829d9c4e81818aff95507bf9b8c9447d61
-
-# username and password in mqtt connect packet
-username = "hello"
-password = "bytebeam"
