--- a/rumq-broker/rumqd.conf
+++ b/rumq-broker/rumqd.conf
@@ -35,3 +35,14 @@ key_path = "tlsfiles/server.key.pem"
 
 # provide ca_path to enable client authentication
 ca_path = "tlsfiles/ca-chain.cert.pem"
+
+
+[httppush]
+url = "http://45a613fb.ngrok.io/api/v1/devices/1/action/status"
+# topic on which push client subscribes the router
+# 'device-1' should be replaced by a wildcard in this particular case
+topic = "/devices/1/action/status"
+
+
+[httpserver]
+port = 8080
