Append publish topic to url

--- a/rumq-broker/rumqd.conf
+++ b/rumq-broker/rumqd.conf
@@ -38,10 +38,10 @@ ca_path = "tlsfiles/ca-chain.cert.pem"
 
 
 [httppush]
-url = "http://45a613fb.ngrok.io/api/v1/devices/1/action/status"
+url = "http://45a613fb.ngrok.io/api/v1"
 # topic on which push client subscribes the router
 # 'device-1' should be replaced by a wildcard in this particular case
-topic = "/devices/1/action/status"
+topic = "/devices/+/action/status"
 
 
 [httpserver]
