--- a/rumq-cli/Cargo.toml
+++ b/rumq-cli/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+structopt = "0.3"
+pretty_env_logger = "0.3"
+toml = "0.5"
+rumq-broker = { path = "../rumq-broker" }
+serde = { version = "1", features = ["derive"] }
