Synchronous MqttRead/Write traits

--- a/rumq-core/Cargo.toml
+++ b/rumq-core/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 derive_more = "0.15"
 tokio = { version = "0.2", features = ["io-util"] }
 async-trait = "0.1"
+byteorder = "1"
 getset = "0.0.9"
 
 
