--- a/rumq-broker/Cargo.toml
+++ b/rumq-broker/Cargo.toml
@@ -8,12 +8,14 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
+tokio-util = { version = "0.2", features = ["codec"] }
+futures-util = { version = "0.3", features = ["sink"] }
 tokio-rustls = "0.12"
 hyper = "0.13"
-futures-util = "0.3"
 rumq-core = { path = "../rumq-core" }
 derive_more = "0.99"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
+bytes = "0.5"
 
 [dev-dependencies]
