--- a/rumq-broker/Cargo.toml
+++ b/rumq-broker/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumq-broker"
-version = "0.1.0"
+version = "0.1.0-alpha.4"
 authors = ["tekjar <kraviteza@gmail.com>"]
 edition = "2018"
 
