Add required meta fields to publish

--- a/rumq-broker/Cargo.toml
+++ b/rumq-broker/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "rumq-broker"
 version = "0.1.0-alpha.4"
+description = "Library for embeddable mqtt broker"
+license = "MIT"
+repository = "https://github.com/tekjar/rumq"
 authors = ["tekjar <kraviteza@gmail.com>"]
 edition = "2018"
 
