--- a/rumq-cli/Cargo.toml
+++ b/rumq-cli/Cargo.toml
@@ -13,5 +13,5 @@ edition = "2018"
 structopt = "0.3"
 pretty_env_logger = "0.3"
 toml = "0.5"
-rumq-broker = { path = "../rumq-broker" }
+rumq-broker = { path = "../rumq-broker", version = "0.1.0-alpha.4" }
 serde = { version = "1", features = ["derive"] }
