--- a/rumq-cli/Cargo.toml
+++ b/rumq-cli/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "0.2", features = ["full"] }
 structopt = "0.3"
 pretty_env_logger = "0.3"
 toml = "0.5"
