Make codec accept payload size constraints

--- a/rumqd.conf
+++ b/rumqd.conf
@@ -10,7 +10,7 @@ disk_persistence = false
 disk_retention_size = 100
 disk_retention_time_sec = 1000
 auto_save_interval_sec = 1000
-max_packet_size = 1024
+max_payload_size = 2048
 max_inflight_queue_size = 1024
 
 
@@ -26,7 +26,7 @@ disk_persistence = false
 disk_retention_size = 100
 disk_retention_time_sec = 1000
 auto_save_interval_sec = 1000
-max_packet_size = 1024
+max_payload_size = 2048
 max_inflight_queue_size = 1024
 
 # this enables tls connection
