--- a/rumqd.conf
+++ b/rumqd.conf
@@ -1,33 +1,31 @@
 [[servers]]
 port = 1883
+next_connection_delay_ms = 10
 connection_timeout_ms = 100
 max_client_id_len = 256
 max_connections = 1
-max_cloud_to_device_throughput = 100
-max_device_to_cloud_throughput = 100
-max_incoming_messages_per_sec = 100
+throttle_delay_ms = 0
 disk_persistence = false
 disk_retention_size = 100
 disk_retention_time_sec = 1000
 auto_save_interval_sec = 1000
 max_payload_size = 2048
-max_inflight_queue_size = 1024
+max_inflight_topic_size = 1024
 
 
 [[servers]]
 port = 8883
+next_connection_delay_ms = 10
 connection_timeout_ms = 100 
 max_client_id_len = 256
 max_connections = 1
-max_cloud_to_device_throughput = 100
-max_device_to_cloud_throughput = 100
-max_incoming_messages_per_sec = 100
+throttle_delay_ms = 1
 disk_persistence = false
 disk_retention_size = 100
 disk_retention_time_sec = 1000
 auto_save_interval_sec = 1000
 max_payload_size = 2048
-max_inflight_queue_size = 1024
+max_inflight_topic_size = 1024
 
 # this enables tls connection
 cert_path = "tlsfiles/server.cert.pem"
