--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive_more = { version = "0.99", default-features = false, features = ["from"] }
 tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "stream", "sync", "time", "macros"] }
 tokio-util = { version = "0.3", features = ["codec"] }
 futures-util = { version =  "0.3", features = ["sink"] }
@@ -19,6 +18,7 @@ webpki = "0.21"
 tokio-rustls = "0.13"
 rumq-core = { path = "../rumq-core", version = "0.1.0-alpha.8" }
 log = "0.4"
+thiserror = "1.0.15"
 
 [dev-dependencies]
 pretty_env_logger = "0.4"
