--- a/mqtt4bytes/Cargo.toml
+++ b/mqtt4bytes/Cargo.toml
@@ -1,11 +1,25 @@
 [package]
 name = "mqtt4bytes"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
 license = "MIT"
 description = "MQTT 4 core serialization and deserialization"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+std = ["thiserror", "tokio-util"]
+default = ["std"]
 
 [dependencies]
+bytes = { version = "0.5", default-features = false }
+tokio-util = { version = "0.3", features = ["codec"], optional = true }
+thiserror = { version = "1", optional = true }
+cfg-if = "0.1"
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
+bencher = "0.1"
+
+[[bench]]
+name = "bench"
+harness = false
