--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -12,8 +12,12 @@ memmap = "0.7"
 bytes = "0.5"
 confy = "0.4"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1" }
+async-channel = "1"
 tokio = { version = "=0.2.20", features = ["full"] }
+tokio-util = { version = "0.3", features = ["codec"] }
+futures-util = { version =  "0.3", features = ["sink"] }
 serde = { version = "1", features = ["derive"] }
+indexmap = "1"
 thiserror = "1"
 log = "0.4"
 fnv = "1"
@@ -28,9 +32,7 @@ rand = "0.7"
 bencher = "0.1"
 pretty_env_logger = "0.4"
 futures-util = "0.3.5"
-
-[profile.release]
-debug = true
+file-per-thread-logger = "0.1"
 
 [[bench]]
 name = "bench"
