--- a/rumq-client/Cargo.toml
+++ b/rumq-client/Cargo.toml
@@ -10,13 +10,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "stream", "sync", "time", "macros"] }
+tokio = { version = "0.2", features = ["full"] }
 tokio-util = { version = "0.3", features = ["codec"] }
 futures-util = { version =  "0.3", features = ["sink"] }
-async-stream = "0.2"
 webpki = "0.21"
 tokio-rustls = "0.13"
-rumq-core = { path = "../rumq-core", version = "0.1.0-alpha.10" }
+mqtt4bytes = { path = "../mqtt4bytes", version = "0.1" }
+async-channel = "1"
+blocking = "0.4"
 log = "0.4"
 thiserror = "1.0.15"
 
