Remove old broker and rename client (#82)
Co-authored-by: tekjar <raviteja@bytebeam.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,7 @@
 members = [
   "mqtt4bytes",
   "mqtt5bytes",
+  "rumqttc",
   "rumqttlog",
   "rumqttd",
-  "rumq-core",
-  "rumq-client",
-  "rumq-broker",
-  "rumq-cli"
 ]
