--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 rumqttc = { path = "../rumqttc" }
 tokio = { version = "0.2", features = ["full"]}
+paho-mqtt = "0.7"
 async-channel = "1"
 pretty_env_logger = "0.4"
 prost = "0.6"
@@ -21,3 +22,7 @@ path = "rumqttasync.rs"
 [[bin]]
 name = "rumqttsync"
 path = "rumqttsync.rs"
+
+[[bin]]
+name = "paho"
+path = "paho.rs"
