--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -14,7 +14,8 @@ rumqttlog = { path = "../rumqttlog" }
 tokio = { version = "=0.2.19", features = ["full"] }
 futures = { version = "0.3", features = ["compat"] }	
 bytes = "0.5"
-paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
+# paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
+paho-mqtt = "0.7"
 async-channel = "1"
 pretty_env_logger = "0.4"
 prost = "0.6"
@@ -37,6 +38,6 @@ path = "routernxn.rs"
 name = "pahosync"
 path = "pahosync.rs"
 
-[[bin]]
-name = "pahoasync"
-path = "pahoasync.rs"
+# [[bin]]
+# name = "pahoasync"
+# path = "pahoasync.rs"
