--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2018"
 [dependencies]
 argh = "0.1"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1"}
-rumqttc = { path = "../rumqttc" }
+rumqttc = { path = "../rumqttc", features = ["passthrough"] }
 rumqttlog = { path = "../rumqttlog" }
-tokio = { version = "=0.2.19", features = ["full"] }
+tokio = { version = "=0.2.21", features = ["full"] }
 futures = { version = "0.3", features = ["compat"] }	
 bytes = "0.5"
 # paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
@@ -25,6 +25,16 @@ pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
 [[bin]]
 name = "rumqttasync"
 path = "rumqttasync.rs"
+
+
+[[bin]]
+name = "rumqttasyncqos0"
+path = "rumqttasyncqos0.rs"
+
+
+[[bin]]
+name = "rumqttasyncbulk"
+path = "rumqttasyncbulk.rs"
 
 [[bin]]
 name = "rumqttsync"
