--- a/mqtt4bytes/Cargo.toml
+++ b/mqtt4bytes/Cargo.toml
@@ -4,19 +4,12 @@ version = "0.1.4"
 readme = "README.md"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
-license = "MIT"
+license = "Apache-2.0"
 description = "MQTT 4 core serialization and deserialization"
-
-[features]
-std = ["thiserror", "tokio-util"]
-default = ["std"]
 
 [dependencies]
 bytes = { version = "0.5", default-features = false }
-tokio-util = { version = "0.3", features = ["codec"], optional = true }
-thiserror = { version = "1", optional = true }
-rand = "0.7"
-cfg-if = "0.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
+rand = "0.7"
