--- a/mqtt5bytes/Cargo.toml
+++ b/mqtt5bytes/Cargo.toml
@@ -3,7 +3,7 @@ name = "mqtt5bytes"
 version = "0.1.0"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
-license = "MIT"
+license = "Apache-2.0"
 description = "MQTT 5 core serialization and deserialization"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
