--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -9,13 +9,16 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["passthrough"]
+passthrough = []
+
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-tokio-util = { version = "0.3", features = ["codec"] }
-futures-util = { version =  "0.3", features = ["sink"] }
+bytes = "0.5"
 webpki = "0.21"
 tokio-rustls = "0.13"
-mqtt4bytes = { path = "../mqtt4bytes", version = "0.1", features = ["std"] }
+mqtt4bytes = { path = "../mqtt4bytes", version = "0.1"}
 async-channel = "1"
 blocking = "0.4"
 log = "0.4"
