--- a/mqtt4bytes/Cargo.toml
+++ b/mqtt4bytes/Cargo.toml
@@ -7,9 +7,17 @@ edition = "2018"
 license = "Apache-2.0"
 description = "MQTT 4 core serialization and deserialization"
 
+[lib]
+bench = false
+
 [dependencies]
 bytes = { version = "0.5", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 rand = "0.7"
+criterion = "0.3"
+
+[[bench]]
+name = "bench"
+harness = false
