--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -7,17 +7,23 @@ authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "librumqttd"
+path = "src/lib.rs"
+
+[[bin]]
+name = "rumqttd"
+path = "src/bin.rs"
 
 [dependencies]
 rumqttlog = { path = "../rumqttlog", version = "0.1"}
+rumqttc = { path = "../rumqttc", version = "0.0.4"}
 tokio = { version = "0.2", features = ["full"]}
-futures-util = { version = "0.3", features = ["sink"]}
-tokio-util = { version = "0.3", features = ["codec"]}
 serde = { version = "1", features = ["derive"] }
-indexmap = "1"
 log = "0.4"
 thiserror = "1"
-
-[dev-dependencies]
-pretty_env_logger = "0.4"
+argh = "0.1.3"
 confy = "0.4.0"
+pretty_env_logger = "0.4"
+bytes = "0.5.6"
+
