--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -12,10 +12,9 @@ memmap = "0.7"
 bytes = "0.5"
 confy = "0.4"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1" }
+rumqttc = { path = "../rumqttc", version = "0.0.4"}
 async-channel = "1"
 tokio = { version = "0.2", features = ["full"] }
-tokio-util = { version = "0.3", features = ["codec"] }
-futures-util = { version =  "0.3", features = ["sink"] }
 serde = { version = "1", features = ["derive"] }
 indexmap = "1"
 thiserror = "1"
