--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -15,7 +15,7 @@ passthrough = []
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-bytes = "0.5"
+bytes = "=0.5.6"
 webpki = "0.21"
 tokio-rustls = "0.13"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1"}
