--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/bin.rs"
 [dependencies]
 rumqttlog = { path = "../rumqttlog", version = "0.1"}
 rumqttc = { path = "../rumqttc", version = "0.0.4"}
-tokio = { version = "0.2", features = ["full"]}
+tokio = { version = "=0.2.22", features = ["full"]}
 serde = { version = "1", features = ["derive"] }
 log = "0.4"
 thiserror = "1"
@@ -26,4 +26,8 @@ argh = "0.1.3"
 confy = "0.4.0"
 pretty_env_logger = "0.4"
 bytes = "0.5.6"
+flame = "0.2.2"
+prost = "0.6"
+pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
+ctrlc = "=3.1"
 
