--- a/rumqttd/rumqttd0.conf
+++ b/rumqttd/rumqttd0.conf
@@ -41,3 +41,13 @@ dir = "/tmp/rumqttd"
 max_segment_size = 102400
 max_segment_count = 10000
 instant_ack = false
+
+[[broker.router.mesh]]
+id = 0
+host = "localhost"
+port = 1800
+
+[[broker.router.mesh]]
+id = 1
+host = "localhost"
+port = 1801
