--- a/rumqttd/rumqttd1.conf
+++ b/rumqttd/rumqttd1.conf
@@ -1,5 +1,5 @@
 [[broker.servers]]
-port = 1883
+port = 1884
 next_connection_delay_ms = 10
 connection_timeout_ms = 100
 max_client_id_len = 256
@@ -15,7 +15,7 @@ max_inflight_size = 1024
 instant_ack = false
 
 [[broker.servers]]
-port = 8883
+port = 8884
 next_connection_delay_ms = 10
 connection_timeout_ms = 100
 max_client_id_len = 256
@@ -36,8 +36,18 @@ key_path = "tlsfiles/server.key.pem"
 ca_path = "tlsfiles/ca-chain.cert.pem"
 
 [broker.router]
-id = 0
+id = 1
 dir = "/tmp/rumqttd"
 max_segment_size = 102400
 max_segment_count = 10000
 instant_ack = false
+
+[[broker.router.mesh]]
+id = 0
+host = "localhost"
+port = 1800
+
+[[broker.router.mesh]]
+id = 1
+host = "localhost"
+port = 1801
