--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumqttc"
-version = "0.0.4"
+version = "0.0.5"
 description = "An efficeint and robust mqtt client for your connected devices"
 license = "Apache-2.0"
 repository = "https://github.com/bytebeamio/rumqtt"
@@ -15,7 +15,7 @@ passthrough = []
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-bytes = "=0.5.6"
+bytes = "0.5"
 webpki = "0.21"
 tokio-rustls = "0.13"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1"}
