--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1", features = ["derive"] }
 indexmap = "1"
 thiserror = "1"
 log = "0.4"
+intmap = "0.7"
 fnv = "1"
 
 [dev-dependencies]
