--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,13 +7,17 @@ name: master
 
 jobs:
   test:
-    name: rumqtt
+    name: rumqtt build and test
     runs-on: [self-hosted, linux, X64, rumqtt]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --all-features
       - uses: actions-rs/cargo@v1
         with:
           command: test
