--- a/config/rumqttd.conf
+++ b/config/rumqttd.conf
@@ -1,8 +1,1 @@
-[broker]
-servers = []
-
-[broker.router]
-id = 255
-dir = '/tmp/timestone'
-max_segment_size = 5242880
-max_segment_count = 1024
+../rumqttd/config/rumqttd.conf
