--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin.rs"
 
 [dependencies]
 rumqttlog = { path = "../rumqttlog", version = "0.1"}
-rumqttc = { path = "../rumqttc", version = "0.0.6"}
+mqtt4bytes = { path = "../mqtt4bytes", version = "0.1" }
 tokio = { version = "=0.2.22", features = ["full"]}
 serde = { version = "1", features = ["derive"] }
 log = "0.4"
