--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -6,6 +6,8 @@ license = "Apache-2.0"
 repository = "https://github.com/bytebeamio/rumqtt"
 authors = ["tekjar"]
 edition = "2018"
+keywords = ["mqtt"]
+categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
