--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -5,6 +5,8 @@ license = "Apache-2.0"
 version = "0.0.3"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
+keywords = ["mqtt"]
+categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
