--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -38,6 +38,9 @@ ca_path = "tlsfiles/ca-chain.cert.pem"
 [broker.router]
 id = 0
 dir = "/tmp/rumqttd"
-max_segment_size = 102400
+# A commitlog read will pull full segment. Make sure that a segment isn't
+# too big as async tcp writes readiness of one connection might affect tail
+# latencies of other connection. Not a problem with prempting runtimes (tokio)
+max_segment_size = 10240
 max_segment_count = 10
-max_connections = 11000
+max_connections = 10001
