--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -12,14 +12,13 @@ memmap = "0.7"
 bytes = "0.5"
 confy = "0.4"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.1" }
-async-channel = "1.4"
 tokio = { version = "0.2", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
-indexmap = "1"
 thiserror = "1"
 log = "0.4"
 intmap = "0.7"
 fnv = "1"
+flume = "0.9"
 
 [dev-dependencies]
 argh = "0.1"
@@ -31,7 +30,6 @@ rand = "0.7"
 bencher = "0.1"
 pretty_env_logger = "0.4"
 futures-util = "0.3.5"
-file-per-thread-logger = "0.1"
 
 [[bench]]
 name = "bench"
