Unsubscribe implementation and 0.1 (#149)
* Implement unsubscribe and expose disconnect

* Update documentation

* Update versions

* Fix version

* Decrease keywords

Co-authored-by: tekjar <raviteja@bytebeam.io>

--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -2,10 +2,10 @@
 name = "rumqttd"
 description = "Distributed, embeddable mqtt broker library"
 license = "Apache-2.0"
-version = "0.0.3"
+version = "0.0.4"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
-keywords = ["mqtt"]
+keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
 categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
