--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rumqttc"
-version = "0.0.7"
+version = "0.1.0"
 description = "An efficient and robust mqtt client for your connected devices"
 license = "Apache-2.0"
 repository = "https://github.com/bytebeamio/rumqtt"
 authors = ["tekjar"]
 edition = "2018"
-keywords = ["mqtt"]
+keywords = ["mqtt", "iot", "coap", "http"]
 categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
