--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rumqttlog"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
 license = "Apache-2.0"
+keywords = ["mqtt", "iot", "kafka", "nats", "distributed"]
 description = "kafka inspired rumqtt's mqtt commitlog"
 
 [dependencies]
