Fix clippy warnings (#152)
* Fix clippy lint single_match

* Remove unneeded return statements

* Remove needless fn main() in doctest

* Hide main() in async example

* Update markdown formatting

* Use matches::assert_matches over match w/ assert(true) / assert(false) branches

* Replace zero comparisons with is_empty()

* Remove redundant `.clone()`s

* Replace mem::replace by mem::take and remove unnecessary local variable

* Fix clippy lint assign_op_pattern

--- a/rumqttc/Cargo.toml
+++ b/rumqttc/Cargo.toml
@@ -30,3 +30,4 @@ serde = {version = "1", features = ["derive"]}
 envy = "0.4"
 jsonwebtoken = "7"
 tokio = { version = "0.2", features = ["full", "macros"] }
+matches = "0.1.8"
