--- a/rumqttlog/Cargo.toml
+++ b/rumqttlog/Cargo.toml
@@ -11,15 +11,13 @@ description = "kafka inspired rumqtt's mqtt commitlog"
 byteorder = "1"
 memmap = "0.7"
 bytes = "0.5"
-confy = "0.4"
 mqtt4bytes = { path = "../mqtt4bytes", version = "0.2" }
 tokio = { version = "0.2", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 log = "0.4"
-intmap = "0.7"
 fnv = "1"
-flume = "0.9"
+jackiechan = "0.0.2"
 
 [dev-dependencies]
 argh = "0.1"
