--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -19,6 +19,8 @@ async-channel = "1.4"
 pretty_env_logger = "0.4"
 prost = "0.6"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.3"
 
 [[bin]]
