--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -28,8 +28,9 @@ argh = "0.1.3"
 confy = "0.4.0"
 pretty_env_logger = "0.4"
 bytes = "0.5.6"
-flame = "0.2.2"
 prost = "0.6"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
 ctrlc = "=3.1"
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemallocator = "0.3"
