--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -29,6 +29,7 @@ confy = "0.4.0"
 pretty_env_logger = "0.4"
 bytes = "0.5.6"
 prost = "0.6"
+warp = "0.2"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
 ctrlc = "=3.1"
 
