--- a/rumqttd/config/rumqttd.conf
+++ b/rumqttd/config/rumqttd.conf
@@ -1,46 +1,40 @@
-[[broker.servers]]
-port = 1883
-next_connection_delay_ms = 1
-connection_timeout_ms = 100
-max_client_id_len = 256
-max_connections = 1
-throttle_delay_ms = 0
-disk_persistence = false
-disk_retention_size = 100
-disk_retention_time_sec = 1000
-auto_save_interval_sec = 1000
-max_payload_size = 2048
-max_inflight_count = 500
-max_inflight_size = 1024
-instant_ack = false
-
-[[broker.servers]]
-port = 8883
-next_connection_delay_ms = 10
-connection_timeout_ms = 100
-max_client_id_len = 256
-max_connections = 1
-throttle_delay_ms = 0
-disk_persistence = false
-disk_retention_size = 100
-disk_retention_time_sec = 1000
-auto_save_interval_sec = 1000
-max_payload_size = 2048
-max_inflight_count = 100
-max_inflight_size = 1024
-instant_ack = false
-# this enables tls connection
-cert_path = "tlsfiles/server.cert.pem"
-key_path = "tlsfiles/server.key.pem"
-# provide ca_path to enable client authentication
-ca_path = "tlsfiles/ca-chain.cert.pem"
-
-[broker.router]
+# Broker id. Used to identify local node of the replication mesh
 id = 0
-dir = "/tmp/rumqttd"
+
 # A commitlog read will pull full segment. Make sure that a segment isn't
 # too big as async tcp writes readiness of one connection might affect tail
-# latencies of other connection. Not a problem with prempting runtimes (tokio)
+# latencies of other connection. Not a problem with preempting runtimes
+[router]
+id = 0
+dir = "/tmp/rumqttd"
 max_segment_size = 10240
 max_segment_count = 10
 max_connections = 10001
+
+# Configuration of server and connections that it accepts
+[servers.1]
+port = 1883
+next_connection_delay_ms = 1
+    [servers.1.connections]
+    connection_timeout_ms = 100
+    max_client_id_len = 256
+    throttle_delay_ms = 0
+    max_payload_size = 2048
+    max_inflight_count = 500
+    max_inflight_size = 1024
+
+# Configuration of server and connections that it accepts
+[servers.2]
+port = 8883
+next_connection_delay_ms = 10
+    # Tls connections. ca_path enables client authentication
+    [servers.2.connections]
+    connection_timeout_ms = 100
+    max_client_id_len = 256
+    throttle_delay_ms = 0
+    max_payload_size = 2048
+    max_inflight_count = 100
+    max_inflight_size = 1024
+    cert_path = "tlsfiles/server.cert.pem"
+    key_path = "tlsfiles/server.key.pem"
+    ca_path = "tlsfiles/ca-chain.cert.pem"
