--- a/rumqttd/Cargo.toml
+++ b/rumqttd/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rumqttd"
 description = "Distributed, embeddable mqtt broker library"
 license = "Apache-2.0"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["tekjar <raviteja@bytebeam.io>"]
 edition = "2018"
 keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
@@ -18,16 +18,16 @@ name = "rumqttd"
 path = "src/bin.rs"
 
 [dependencies]
-rumqttlog = { path = "../rumqttlog", version = "0.2"}
-mqtt4bytes = { path = "../mqtt4bytes", version = "0.3" }
-tokio = { version = "=0.2.22", features = ["full"]}
+rumqttlog = { path = "../rumqttlog", version = "0.3"}
+mqtt4bytes = { path = "../mqtt4bytes", version = "0.4" }
+tokio = { version = "0.3", features = ["full"]}
 serde = { version = "1", features = ["derive"] }
 log = "0.4"
 thiserror = "1"
 argh = "0.1.3"
 confy = "0.4.0"
 pretty_env_logger = "0.4"
-bytes = "0.5.6"
+bytes = "0.6"
 prost = "0.6"
 warp = "0.2"
 pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
